cloud and frontend integration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=CVProject7.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+azureml.endpoint=https://cv-project.westeurope.inference.ml.azure.com/score
+azureml.apikey=kcwn8jRhsmnKoeZS7TNM153raB1udTzH
