--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://cv-project-mysql2.mysql.database.azure.com:3306/cvproject?useSSL=true&requireSSL=true
-spring.datasource.username=plasius
-spring.datasource.password=CVProject7.
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-azureml.endpoint=https://cv-project.westeurope.inference.ml.azure.com/score
-azureml.apikey=kcwn8jRhsmnKoeZS7TNM153raB1udTzH
+azureml.endpoint=${ML_ENDPOINT}
+azureml.apikey=${ML_APIKEY}
